# unofficial-lava-lamp-ha-integration

./: .devcontainer.json  .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  test.yml  validate.yml
blueprints/automation/: lava_lamp_rgb_light.yaml
config/: configuration.yaml
custom_components/lava_lamp/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  strings.json
custom_components/lava_lamp/translations/: en.json
scripts/: develop  lint  reset-config  setup
tests/: test_models.py
