[project]
name = "unofficial-lava-lamp-ha-integration"
version = "0.1.0"
description = "HACS custom integration for the lava lamp RGB API."
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "aiodns==3.2.0",
    "ha-ffmpeg==3.2.0",
    "hassil==1.6.1",
    "homeassistant==2024.5.1",
    "home-assistant-intents==2024.4.24",
    "josepy<2",
    "mutagen==1.47.0",
    "numpy==2.4.6",
    "pycares<5",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
